# dmgextract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  prepare.sh
lib/ApfsLib/: BlockDumper.cpp  DeviceWinPhys.cpp  DeviceWinPhys.h  DiskStruct.h  Endian.h  Sha256.cpp
other/: windows.cmake
src/: APFSHandler.cpp  APFSWriter.cpp  APFSWriter.hpp  apfs.cpp  apfs.hpp  main.cpp  utils.cpp  utils.hpp
src/APFS/: APFSHandler.cpp  APFSHandler.hpp  APFSWriter.cpp  APFSWriter.hpp
